# pico_strain

./: CMakeLists.txt  LICENSE  README.md  ads131m0x.h  config.h  hal.c  hal.h  pico_strain.c
ADS131/: CMakeLists.txt  ads131m0x.c  ads131m0x.h  hal.c  hal.h
hardware/revA/Altium/: AFE.SchDoc  Input.SchDoc  PCB.PcbDoc  straingauge_mk1.BomDoc  straingauge_mk1.PrjPcb
